crates/slopty-proto/tests/snapshots/golden__conversation__client_answer_question.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
33 00 00 00 0e 02 10 01 02 03 04 05 06 07 08 09
0a 0b 0c 0d 0e 0f 10 03 03 01 0d 57 68 69 63 68
20 6c 61 79 6f 75 74 3f 0e 53 70 6c 69 74 2c 20
53 74 61 63 6b 65 64
