crates/slopty-proto/tests/snapshots/golden__conversation__client_approvals_on.snap
---
source: crates/slopty-proto/tests/golden.rs
assertion_line: 2402
expression: hex(&bytes)
---
03 00 00 00 0d 05 01
