crates/slopty-proto/tests/snapshots/golden__conversation__client_expand.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
26 00 00 00 0e 03 10 01 02 03 04 05 06 07 08 09
0a 0b 0c 0d 0e 0f 10 01 02 61 31 02 72 31 01 02
74 31 07 63 6f 6d 6d 61 6e 64
