crates/slopty-proto/tests/snapshots/golden__conversation__client_expand_image.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
1a 00 00 00 0e 03 10 01 02 03 04 05 06 07 08 09
0a 0b 0c 0d 0e 0f 10 00 02 72 31 06 00 02
