crates/slopty-proto/tests/snapshots/golden__conversation__client_mention_search.snap
---
source: crates/slopty-proto/tests/golden.rs
assertion_line: 2402
expression: hex(&bytes)
---
1b 00 00 00 0d 04 10 01 02 03 04 05 06 07 08 09
0a 0b 0c 0d 0e 0f 10 06 73 72 63 2f 6d 61 32
