crates/slopty-proto/tests/snapshots/golden__conversation__client_unfollow.snap
---
source: crates/slopty-proto/tests/golden.rs
assertion_line: 2402
expression: hex(&bytes)
---
13 00 00 00 0d 01 10 01 02 03 04 05 06 07 08 09
0a 0b 0c 0d 0e 0f 10
