crates/slopty-proto/tests/snapshots/golden__conversation__conversation_changes.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
14 01 00 00 00 0f 03 00 00 00 02 75 31 07 00 05
64 6f 20 69 74 84 07 c0 b8 02 01 02 72 31 00 00
01 01 08 2f 63 6f 6d 70 61 63 74 00 00 04 75 32
3a 30 07 01 03 79 65 73 01 03 00 00 00 04 75 32
3a 31 07 02 03 68 6d 6d 01 03 00 00 00 02 75 33
07 04 01 04 61 75 74 6f 01 f0 93 09 01 a8 46 01
06 73 6f 20 66 61 72 01 03 00 00 00 02 75 34 07
05 01 00 00 02 75 35 07 06 00 03 35 32 39 01 03
00 01 02 0a cc 08 00 00 02 75 36 07 06 01 02 6f
6b 01 03 00 00 00 00 02 75 37 07 06 02 03 66 79
69 01 03 00 00 00 00 02 75 38 07 06 03 02 6e 6f
01 03 00 00 00 00 02 75 39 07 07 06 01 01 02 61
31 02 75 30 02 00 01 01 31 08 57 72 69 74 65 20
69 74 07 70 65 6e 64 69 6e 67 03 01 01 02 61 31
04 00 02 75 31 07 01 09 01 0f 63 6c 61 75 64 65
2d 6f 70 75 73 2d 35 2d 35 03 0c c0 b8 02 a0 06
84 07 ac 02 01 f0 c1 02 01 04 70 6c 61 6e 01 08
65 6e 64 5f 74 75 72 6e
